# smtp-analyzer

./: .gitignore  Cargo.toml  README.md  upload_to_github.bat
.github/workflows/: ci.yml
scripts/: smoke-test.ps1
src/: analyzer.rs  app.rs  capture.rs  decoder.rs  diagnostic_text.rs  error.rs  flow.rs  main.rs  model.rs  report.rs  service.rs
web/: app.js  index.html  styles.css
