[package]
name = "smtp-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["SMTP Analyzer Team"]
description = "SMTP traffic integrity analyzer for pcap files"

[dependencies]
# pcap/pcapng 文件解析
pcap-parser = "0.15"
# 网络协议解析 (Ethernet, IP, TCP)
etherparse = "0.15"
# 命令行参数处理
clap = { version = "4.5", features = ["derive"] }
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# CSV 输出
csv = "1.3"
# 错误处理
thiserror = "1.0"
# 日志
log = "0.4"
env_logger = "0.11"
# SmallVec 优化 VLAN 栈
smallvec = "1.13"

[profile.release]
opt-level = 3
lto = true
